Fix control bar being overlapped by descriptor

--- a/css/default.css
+++ b/css/default.css
@@ -158,6 +158,7 @@ a:hover
     height: auto;
     max-width: 100%;
     max-height: 100%;
+    margin-bottom: 39px;
 }
 
 /* Hide the images by default */
